# aiprism-mcp-extension

./: .gitignore  Cargo.toml  README.md  structure.md
src/: config.rs  main.rs  mcp_setup.rs
src/collection/: mod.rs
src/models/: mod.rs
src/network/: mod.rs  sender.rs
src/pair/: diff.rs  mod.rs
src/strategy/: mod.rs
src/strategy/log/: claude.rs  copilot.rs  mod.rs
src/strategy/path/: linux.rs  macos.rs  mod.rs  windows.rs
src/watcher/: claude_log_watcher.rs  copilot_log_watcher.rs  file_watcher.rs  log_watcher.rs  mod.rs
