[package]
name = "aiprism-local"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
linemux = "0.3"
notify = "8.2"
async-trait = "0.1"
tempfile = "3.8"
similar = "2.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.6"

[[bin]]
name = "aiprism"
path = "src/main.rs"
